kustomize/monitoring/base/metrics-prometheus-server-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: metrics-prometheus-server-grafana-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /grafana(/|$)(.*)
            backend:
              serviceName: metrics-grafana
              servicePort: 80
          - path: /prometheus(/|$)(.*)
            backend:
              serviceName: metrics-prometheus-server
              servicePort: 80
